--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
